; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/remote/extr_39195.c_payload_extract_ent_srv_0.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/remote/extr_39195.c_payload_extract_ent_srv_0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEY_ENT_SRV_0 = common dso_local global i32 0, align 4
@DELIM = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*, i8*, i32)* @payload_extract_ent_srv_0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @payload_extract_ent_srv_0(i8** %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8** %0, i8*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* @KEY_ENT_SRV_0, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @payload_get_offset_by_name(i32 %13, i8* %14, i32 %15)
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* @KEY_ENT_SRV_0, align 4
  %18 = call i32 @strlen(i32 %17)
  store i32 %18, i32* %11, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = load i32, i32* %10, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %19, i64 %21
  %23 = load i32, i32* @KEY_ENT_SRV_0, align 4
  %24 = load i32, i32* %11, align 4
  %25 = call i64 @memcmp(i8* %22, i32 %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %68

28:                                               ; preds = %4
  %29 = load i32, i32* %11, align 4
  %30 = add i32 %29, 1
  %31 = load i32, i32* %10, align 4
  %32 = add i32 %31, %30
  store i32 %32, i32* %10, align 4
  %33 = load i32, i32* %10, align 4
  store i32 %33, i32* %12, align 4
  br label %34

34:                                               ; preds = %50, %28
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* %9, align 4
  %37 = icmp ult i32 %35, %36
  br i1 %37, label %38, label %48

38:                                               ; preds = %34
  %39 = load i8*, i8** %8, align 8
  %40 = load i32, i32* %10, align 4
  %41 = zext i32 %40 to i64
  %42 = getelementptr inbounds i8, i8* %39, i64 %41
  %43 = load i8, i8* %42, align 1
  %44 = sext i8 %43 to i32
  %45 = load i8, i8* @DELIM, align 1
  %46 = sext i8 %45 to i32
  %47 = icmp ne i32 %44, %46
  br label %48

48:                                               ; preds = %38, %34
  %49 = phi i1 [ false, %34 ], [ %47, %38 ]
  br i1 %49, label %50, label %53

50:                                               ; preds = %48
  %51 = load i32, i32* %10, align 4
  %52 = add i32 %51, 1
  store i32 %52, i32* %10, align 4
  br label %34

53:                                               ; preds = %48
  %54 = load i32, i32* %10, align 4
  %55 = load i32, i32* %9, align 4
  %56 = icmp eq i32 %54, %55
  br i1 %56, label %57, label %58

57:                                               ; preds = %53
  store i32 1, i32* %5, align 4
  br label %68

58:                                               ; preds = %53
  %59 = load i8*, i8** %8, align 8
  %60 = load i32, i32* %12, align 4
  %61 = zext i32 %60 to i64
  %62 = getelementptr inbounds i8, i8* %59, i64 %61
  %63 = load i8**, i8*** %6, align 8
  store i8* %62, i8** %63, align 8
  %64 = load i32, i32* %10, align 4
  %65 = load i32, i32* %12, align 4
  %66 = sub i32 %64, %65
  %67 = load i32*, i32** %7, align 8
  store i32 %66, i32* %67, align 4
  store i32 0, i32* %5, align 4
  br label %68

68:                                               ; preds = %58, %57, %27
  %69 = load i32, i32* %5, align 4
  ret i32 %69
}

declare dso_local i32 @payload_get_offset_by_name(i32, i8*, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i64 @memcmp(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
